--- a/openpdf/pom.xml
+++ b/openpdf/pom.xml
@@ -27,12 +27,19 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk18on</artifactId>
+            <artifactId>bc-fips</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>8</version>
+            <scope>system</scope>
+            <systemPath>D:/tempTtest/currentTest/AdventNet/MickeyLite/jre/lib/rt.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk18on</artifactId>
+            <artifactId>bcpkix-fips</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -71,6 +78,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bc-fips</artifactId>
+            <version>1.0.2.3</version>
         </dependency>
     </dependencies>
 
